# nv1

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  START_TRAINING.sh  commit.sh  config.toml  docker-compose.yml  launch_dashboard.sh  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  run.sh  setup_docker.sh  train
docs/: CHANGELOG.md  DOCS_REVIEW_2025.md  README.md  USER_GUIDE.md
docs/_archive/: README.md
docs/_archive/development/: CACHING_AUDIT.md  RENTEC_STYLE_ROADMAP.md  WEEKEND_IMPROVEMENTS_SUMMARY.md
docs/_archive/guides/: DOCUMENTATION_SUMMARY.md  OPERATION_MANUAL.md  QUICK_START.md
docs/_archive/reference/: ALPACA_DATA_CAPABILITIES.md  DATABASE_BACKUP.md  SECRETS_MANAGEMENT.md
docs/_archive/research/: MODEL_ARCHITECTURE.md  README.md
docs/architecture/: SYSTEM_ARCHITECTURE.md  TECH_STACK.md
docs/development/: INTEGRATION_STATUS.md  PORTFOLIO_AUTOMATIC.md  PORTFOLIO_IMPLEMENTATION.md  PORTFOLIO_OPTIMIZATION_SWING_TRADING.md  versionlog.md
docs/guides/: INDICATOR_VALIDATION_GUIDE.md
docs/guides/dashboard/: DASHBOARD_GUIDE.md
docs/guides/training/: QUICK_COMMANDS.md  (+2 more)
docs/research/: post_training_analysis.md
knowledge/: RESEARCH_SUMMARY.md
mcp_server/: db_connector.py
models/: AAPL_wfo_20260117.json.metadata  AMD_wfo_20260118.json.metadata  AMZN_wfo_20260117.json.metadata  BA_wfo_20260118.json.metadata  CAT_wfo_20260118.json.metadata  CVX_wfo_20260118.json.metadata  GOOGL_wfo_20260117.json.metadata  GS_wfo_20260118.json.metadata  INTC_wfo_20260118.json.metadata  JNJ_wfo_20260118.json.metadata  JPM_wfo_20260118.json.metadata  KO_wfo_20260118.json.metadata  META_wfo_20260117.json.metadata  MSFT_wfo_20260117.json.metadata  NFLX_wfo_20260118.json.metadata  NKE_wfo_20260118.json.metadata  NVDA_wfo_20260117.json.metadata  PFE_wfo_20260118.json.metadata  QQQ_wfo_20260118.json.metadata  SPY_wfo_20260118.json.metadata  TSLA_wfo_20260117.json.metadata  UNH_wfo_20260118.json.metadata  WMT_wfo_20260118.json.metadata  XOM_wfo_20260118.json.metadata
reports/: indicator_ranking_20260116_181134.json  indicator_ranking_20260116_181139.json  indicator_ranking_20260116_181143.json  indicator_ranking_20260116_181148.json  indicator_ranking_20260116_181152.json  indicator_ranking_20260116_181157.json  indicator_ranking_20260116_181201.json  indicator_ranking_20260116_181206.json  indicator_ranking_20260116_181208.json  indicator_ranking_20260116_181212.json  indicator_ranking_20260116_181217.json  indicator_ranking_20260116_181221.json  indicator_ranking_20260116_181226.json  indicator_ranking_20260116_181231.json  indicator_ranking_20260116_181235.json  indicator_ranking_20260116_181237.json  indicator_ranking_20260116_181242.json  indicator_ranking_20260116_181246.json  indicator_ranking_20260116_181251.json  indicator_ranking_20260116_181255.json  indicator_ranking_20260116_181300.json  indicator_ranking_20260116_181305.json  indicator_ranking_20260116_181307.json  indicator_ranking_20260116_181312.json  indicator_ranking_20260116_181317.json  indicator_ranking_20260116_181321.json  indicator_ranking_20260116_181326.json  indicator_ranking_20260116_181330.json  indicator_ranking_20260116_181335.json  indicator_ranking_20260116_181337.json  indicator_ranking_20260116_181342.json  indicator_ranking_20260116_181346.json  indicator_ranking_20260116_181351.json  indicator_ranking_20260116_181355.json  indicator_ranking_20260116_181400.json  indicator_ranking_20260116_181404.json  indicator_ranking_20260116_181407.json  indicator_ranking_20260116_181411.json  indicator_ranking_20260116_181416.json  indicator_ranking_20260116_181420.json  (+26 more)
scripts/: README.md  analyze_data_gaps.py  analyze_models.py  prepare_training.py  review_training_data.py  setup_conda_rmm.sh  test_alpaca_connection.py  train.py  train_master_model.py  train_models.py  validate_indicator_ranking.py
src/nova/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/unit/: test_retry.py  test_validation.py
(+54 files in other folders)
